# gpt2_profiling

./: .env.example  .gitignore  pyproject.toml
gpt_profiling/: trainer.py
gpt_profiling/model/: causal_self_attention.py  config.py  gpt_model.py
notebooks/: attention_viz.ipynb  load_hf.ipynb  play_data.ipynb  play_train.ipynb
src/: trainer.py
src/data/: dataloader.py  tinyshakespeare.py
src/model/: Block.py  CausalSelfAttention.py  block.py  config.py  gpt_model.py  mlp.py
