[project]
name = "gpt2-profiling"
version = "0.1.0"
description = "A project to understand and optimize DL models. Gpt2 in particular. Try fusing layers and other optimizations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "transformers>=5.8.0",
]
